--- a/.github/workflows/bruin.yml
+++ b/.github/workflows/bruin.yml
@@ -14,7 +14,7 @@ jobs:
     - uses: bruin-data/bruin-setup-action@main
     - run: bruin validate ./bruin-pipeline/
       name: Validate Pipeline
-    - run: bruin format
+    - run: bruin format ./bruin-pipeline/
       name: Format Pipeline
     - name: Lineage
       run: |
@@ -29,7 +29,7 @@ jobs:
     - uses: bruin-data/bruin-setup-action@main
     - run: bruin validate ./bruin-pipeline/
       name: Validate Pipeline
-    - run: bruin format
+    - run: bruin format ./bruin-pipeline/
       name: Format Pipeline
     - name: Lineage
       run: |
